--- a/src/app/products/products.page.html
+++ b/src/app/products/products.page.html
@@ -5,38 +5,38 @@
 </ion-header>
 
 <ion-content class="padding has-header" padding>
+		
 	<ion-list>
 		<ion-item class="item item-avatar">
-			<img src="../assets/img/a.jpg">
-			<ion-label >   CANON IP2770</ion-label>
+			<img src="../assets/img/a.jpeg" width="20px" height="20px" style="margin-right: 5px">
+			<ion-label >   KRIPIK USUS</ion-label>
 		</ion-item><p></p>
 		<ion-item class="item item-avatar">
-			<img src="../assets/img/b.jpg">
-			<ion-label >   EPSON L310</ion-label>
+			<img src="../assets/img/b.jpeg" width="20px" height="20Ppx" style="margin-right: 5px">
+			<ion-label >   KRIPIK USUS</ion-label>
 		</ion-item><p></p>
 		<ion-item class="item item-avatar">
-			<img src="../assets/img/c.jpg">
-			<ion-label >   HP 2135</ion-label>
-		</ion-item><p></p>
-		<ion-item class="item item-avatar">
+			<img src="../assets/img/c.jpeg" width="20px" height="20px" style="margin-right: 5px">
+			<ion-label> KRIPIK USUS HOT BEEF</ion-label>
+		</ion-item>
+		<p></p>
+		<!-- <ion-item class="item item-avatar">
 			<img src="../assets/img/d.jpg">
 			<ion-label >   HP P1102</ion-label>
-		</ion-item><p></p>
-		<ion-item class="item item-avatar">
-			<img src="../assets/img/e.jpg">
-			<ion-label >   HP P2015</ion-label>
-		</ion-item><p></p>
-		<ion-item class="item item-avatar">
-			<img src="../assets/img/f.jpg">
-			<ion-label >   EPSON LX-310</ion-label>
-		</ion-item><p></p>
-		<ion-item class="item item-avatar">
-			<img src="../assets/img/g.jpg">
-			<ion-label >   EPSON LQ-2190</ion-label>
-		</ion-item><p></p>
-		<ion-item class="item item-avatar">
-			<img src="../assets/img/h.jpg">
-			<ion-label >   CANON LBP 6030</ion-label>
-		</ion-item><p></p>
+		</ion-item><p></p> -->
 	</ion-list>
 </ion-content>
+<div id="menu-wrapper">
+		<div class="row-menu">
+				<div class="home">
+						<a href="#" class="btn-menu" routerLink="/home" routerDirection="forward">
+							<span class="icon lh60">
+								<ion-icon style="font-size: 40px" name="home"></ion-icon>
+							</span><br>
+							<span class="text">
+
+							</span>
+						</a>
+					</div>
+		</div>
+</div>
